envio final test

--- a/ms_main/Dockerfile
+++ b/ms_main/Dockerfile
@@ -10,6 +10,10 @@ COPY . .
 
 EXPOSE 8080
 
+ENV TZ=America/Bogota
+
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
 CMD [ "node", "app_main.js" ]
 
 #docker build -t ms-main .
