--- a/ms_main/package.json
+++ b/ms_main/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "pg": "^8.7.1",
+    "redis": "^3.1.2",
     "socket.io": "^4.4.0"
   }
 }
